--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,7 +119,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.14.0-dev"
+version = "0.13.99"
 authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
 edition = "2021"
 license = "MIT"
@@ -130,17 +130,17 @@ keywords = ["gui", "ui", "graphics", "interface", "widgets"]
 rust-version = "1.80"
 
 [workspace.dependencies]
-iced = { version = "0.14.0-dev", path = "." }
-iced_core = { version = "0.14.0-dev", path = "core" }
-iced_futures = { version = "0.14.0-dev", path = "futures" }
-iced_graphics = { version = "0.14.0-dev", path = "graphics" }
-iced_highlighter = { version = "0.14.0-dev", path = "highlighter" }
-iced_renderer = { version = "0.14.0-dev", path = "renderer" }
-iced_runtime = { version = "0.14.0-dev", path = "runtime" }
-iced_tiny_skia = { version = "0.14.0-dev", path = "tiny_skia" }
-iced_wgpu = { version = "0.14.0-dev", path = "wgpu" }
-iced_widget = { version = "0.14.0-dev", path = "widget" }
-iced_winit = { version = "0.14.0-dev", path = "winit" }
+iced = { version = "0.13.99", path = "." }
+iced_core = { version = "0.13.99", path = "core" }
+iced_futures = { version = "0.13.99", path = "futures" }
+iced_graphics = { version = "0.13.99", path = "graphics" }
+iced_highlighter = { version = "0.13.99", path = "highlighter" }
+iced_renderer = { version = "0.13.99", path = "renderer" }
+iced_runtime = { version = "0.13.99", path = "runtime" }
+iced_tiny_skia = { version = "0.13.99", path = "tiny_skia" }
+iced_wgpu = { version = "0.13.99", path = "wgpu" }
+iced_widget = { version = "0.13.99", path = "widget" }
+iced_winit = { version = "0.13.99", path = "winit" }
 
 async-std = "1.0"
 bitflags = "2.0"
