--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,7 +135,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.14.0-dev"
+version = "0.13.99"
 authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
 edition = "2024"
 license = "MIT"
@@ -146,22 +146,22 @@ keywords = ["gui", "ui", "graphics", "interface", "widgets"]
 rust-version = "1.85"
 
 [workspace.dependencies]
-iced = { version = "0.14.0-dev", path = "." }
-iced_beacon = { version = "0.14.0-dev", path = "beacon" }
-iced_core = { version = "0.14.0-dev", path = "core" }
-iced_debug = { version = "0.14.0-dev", path = "debug" }
-iced_devtools = { version = "0.14.0-dev", path = "devtools" }
-iced_futures = { version = "0.14.0-dev", path = "futures" }
-iced_graphics = { version = "0.14.0-dev", path = "graphics" }
-iced_highlighter = { version = "0.14.0-dev", path = "highlighter" }
-iced_program = { version = "0.14.0-dev", path = "program" }
-iced_renderer = { version = "0.14.0-dev", path = "renderer" }
-iced_runtime = { version = "0.14.0-dev", path = "runtime" }
-iced_test = { version = "0.14.0-dev", path = "test" }
-iced_tiny_skia = { version = "0.14.0-dev", path = "tiny_skia" }
-iced_wgpu = { version = "0.14.0-dev", path = "wgpu" }
-iced_widget = { version = "0.14.0-dev", path = "widget" }
-iced_winit = { version = "0.14.0-dev", path = "winit" }
+iced = { path = "." }
+iced_beacon = { path = "beacon" }
+iced_core = { path = "core" }
+iced_debug = { path = "debug" }
+iced_devtools = { path = "devtools" }
+iced_futures = { path = "futures" }
+iced_graphics = { path = "graphics" }
+iced_highlighter = { path = "highlighter" }
+iced_program = { path = "program" }
+iced_renderer = { path = "renderer" }
+iced_runtime = { path = "runtime" }
+iced_test = { path = "test" }
+iced_tiny_skia = { path = "tiny_skia" }
+iced_wgpu = { path = "wgpu" }
+iced_widget = { path = "widget" }
+iced_winit = { path = "winit" }
 
 bincode = "1.3"
 bitflags = "2.0"
