--- a/Cargo.toml
+++ b/Cargo.toml
@@ -210,7 +210,8 @@ web-sys = "0.3.69"
 web-time = "1.1"
 wgpu = "24.0"
 window_clipboard = "0.4.1"
-winit = { git = "https://github.com/iced-rs/winit.git", rev = "11414b6aa45699f038114e61b4ddf5102b2d3b4b" }
+#winit = "0.30.99"
+winit = { git = "https://github.com/project-gauntlet/winit.git", rev = "49690da86351375d2e2ebe8b891cdb90a019b996" }
 
 [workspace.lints.rust]
 rust_2018_idioms = { level = "deny", priority = -1 }
